# Thermopot

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  thermopot.c
src/control/: CMakeLists.txt  control.c  control.h
src/heat/: CMakeLists.txt  heat.c  heat.h
src/ssi/: CMakeLists.txt  ssi.c  ssi.h
src/thermal/: CMakeLists.txt  ds18b20.c  ds18b20.h  one_wire.c  one_wire.h  thermal.c  thermal.h
src/tools/: CMakeLists.txt  break_on.h  fixed_point.h  status.h  utils.h
tools/cmake/: ArmNoneEabiGcc.cmake
tools/link/: STM32F051R8_FLASH.lds
